--- a/flutter_notifications/example/pubspec.yaml
+++ b/flutter_notifications/example/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   path_provider: ^1.6.7
   shared_preferences: ^0.5.7
   rxdart: ^0.24.0
-  flutter_local_notifications:
+  flutter_notifications:
     path: ../
 
 dev_dependencies:
