--- a/flutter_notifications/pubspec.yaml
+++ b/flutter_notifications/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_notifications
-description: A cross platform plugin for displaying and scheduling local notifications for Flutter applications with the ability to customise for each platform.
+description: A cross platform plugin for displaying and scheduling notifications for Flutter applications with the ability to customise for each platform.
 version: 3.0.2
 homepage: https://github.com/hello-addweb/flutter_notification.git
 
