--- a/flutter_notifications/example/android/app/src/main/AndroidManifest.xml
+++ b/flutter_notifications/example/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="flutter_local_notifications_example"
+        android:label="flutter_notifications"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
