solve the issue

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: flutter_notifications
+name: flutter_notification
 description: A cross platform plugin for displaying and scheduling notifications for Flutter applications with the ability to customise for each platform.
-version: 1.0.0
+version: 1.0.4
 homepage: https://github.com/hello-addweb/flutter_notification.git
 
 dependencies:
